[package]
name = "anchor_beth_converter"
version = "0.0.0"
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "1.1.2" }
cosmwasm-std = { version = "1.1.19" }
cosmwasm-storage = { version = "1.1.19" }
cw-storage-plus = { version = "1.1.0"}
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
beth = { path = "../../packages/beth", default-features = false, version = "0.3.0"}
cosmwasm-bignumber = "2.2.0"

[dev-dependencies]
cosmwasm-schema = { version = "1.1.19", default-features = false }
